--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
 body {
   margin: 0;
   box-sizing: border-box;
-  background: linear-gradient(90deg, rgb(0, 247, 255), rgb(38, 200, 56));
+  /* background: linear-gradient(90deg, rgb(0, 247, 255), rgb(38, 200, 56)); */
+  background: #081b29;
 }
 
 .FilterAppBar {
@@ -62,13 +63,43 @@ body {
 }
 
 .loading-icon {
-  /* position: relative; */
   width: 300px;
   height: 300px;
-  /* display: flex; */
-  /* justify-content: center; */
-  /* align-items: center; */
 }
+
+/* //////////////Home Page/////////// */
+.movieStyle {
+  padding-top: 10px;
+  cursor: pointer;
+  color: #fff;
+  font-weight: bold;
+  font-size: 36px;
+  transition: 0.3s;
+}
+.movieStyle:hover {
+  color: #007bff;
+  text-decoration: underline;
+}
+
+.carousel button:hover {
+  background: #ff96e3;
+}
+
+/* /////////////////// */
+
+/* /////////////Movie Card/////////////////// */
+.cardMedia {
+  transition: 0.3s;
+  cursor: pointer;
+
+  width: 200px;
+  height: 250px;
+}
+.cardMedia:hover {
+  scale: 1.1;
+}
+
+/* /////////////////////////////// */
 
 @media only screen and (max-width: 600px) {
   .FilterAppBar {
